Tablet footer responsive layout bug fix

--- a/design-final/css/responsive.css
+++ b/design-final/css/responsive.css
@@ -379,8 +379,7 @@
     }
     .footer-subscribe-form-div {
         margin-top: 30px;
-        margin-bottom: 30px;
-        height: 183px;
+        margin-bottom: 28px;
     }
     .footer-subscribe-form {
         width: 100%;
